# pop3-client-rs

./: README.md  craco.config.js  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: email.rs  error.rs  main.rs  pop3.rs
src/components/: Console.tsx  Login.tsx  MailList.tsx
src/states/: ConsoleState.ts  LoginState.ts  SnackState.ts
src/utils/: checkError.ts  useTrigger.ts
