[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["HareInWeed"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = [] }
tokio = { version = "*", features = ["net"] }       # use tokio that comes with tauri

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
