[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["HareInWeed"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
anyhow = "1.0.47"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["shell-open"] }
tokio = { version = "*", features = ["net", "io-util", "macros"] }
tokio-native-tls = "0.3.0"
nom = "7.1.0"
mailparse = "0.13.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
